README.md 업데이트: 날씨 검색 애플리케이션 설명 및 사용 방법 추가